--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
 
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="/images/logo.png" alt="">
-		<img class="smalllogotext" src="/images/scrittalogo.png" alt="">
+		<img class="smalllogo" src="/images/logo.png" alt="fulcrum_banner_top">
+		<img class="smalllogotext" src="/images/scrittalogo.png" alt="fulcrum_text_top">
     	<div id="smallmenulinks">
 			<a href ="#notizie">Notizie</a> 
 			<a href ="#fulcrum">Fulcrum</a> 
@@ -35,7 +35,7 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="images/logo%20350x125.jpg" alt=""></div> 
+		<div class="logowrap"><img class="upperlogo" src="images/logo%20350x125.jpg" alt="fulcrum_logo"></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -60,7 +60,7 @@
 			  <h1>Che cos'è Fulcrum? </h1>
 			</div>
 		  <div class="fulcrumsheet">
-				<img src="images/logo 200x200.jpg" alt="" id="fulcrumlogo">
+				<img src="images/logo 200x200.jpg" alt="fulcrum_logo_square" id="fulcrumlogo">
 				<div class="aboutcontentright">
 				  <h3> Fulcrum Associazione Culturale</h3>
 				  <p>nasce dalla volontà di alcune persone di fare confluire esperienze e abilità personali nei campi dell’editoria, del gioco e dell’arte, promuovendo la creatività degli individui e dei gruppi di lavoro.<br>
@@ -79,21 +79,21 @@
 			    <p> Consulente Marketing e di Prodotto.</p>
 			    <p>Content &nbsp;e Social Media Manager</p>
 			  </div>
-			  <img src="images/foto/angelo.jpg" alt="">
+			  <img src="images/foto/angelo.jpg" alt="Angelo Alvisi">
 		  	</div>
 		<div class="sheet"> 
 			  <div class="aboutcontentleft">
 			    <h3> Paola Giari </h3>
 			    <p>Illustratrice</p>
 			  </div>
-		  <img src="images/foto/paola.jpg" alt="">
+		  <img src="images/foto/paola.jpg" alt="Paola Giari">
 		</div>
 		  <div class="sheet"> 				
 			  	<div class="aboutcontentleft">
 			    	<h3> Luca Oleastri </h3>
 			    	<p> Illustratore</p>
 			  	</div>			
-				<img src="images/foto/luca.jpg" alt="">
+				<img src="images/foto/luca.jpg" alt="Luca Oleastri">
 		  	</div>
 			
 		  <div class="sheet"> 
@@ -101,7 +101,7 @@
 			    	<h3> Chiara Pellicioni </h3>
 			    	<p> Illustratrice</p>
 			  	</div>
-			  <img src="images/foto/chiara.jpg" alt="">
+			  <img src="images/foto/chiara.jpg" alt="Chiara Pellicioni">
 		  	</div>
 	  	  <div class="sheet">			  
 				<div class="aboutcontentleft">
@@ -110,7 +110,7 @@
 					</h3>
 					<p> Grafico, Impaginatore, Game Designer</p>
 				</div>
-			  	<img src="images/foto/mirko.jpg" alt="">
+			  	<img src="images/foto/mirko.jpg" alt="Mirko Pellicioni">
 			</div>
 				</div>
 		</section>
@@ -119,10 +119,9 @@
     		<h2 class="hidden">Fulcrum Associazione Culturale </h2>
     		<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
 			<div class="footericons">
-		  		<div class="footericon"><i class="fab fa-twitter"></i></div>
-          		<div class="footericon"><i class="fab fa-facebook-square"></i></div>
-          		<div class="footericon"><i class="fab fa-instagram"></i></div>
-          		<div class="footericon"><i class="fab fa-youtube"></i></div>
+		  		<div class="footericon"><a href="https://www.facebook.com/fulcrumassociazioneculturale/"><i class="fab fa-facebook-square"></i></a></div>
+          		<div class="footericon"><a href="http://www.instagram.com/fulcrum_associazione_culturale/"><i class="fab fa-instagram"></i></a></div>
+				<div class="footericon"><a href="contactform.html"><i class="fas fa-envelope"></i></a></div>
 			</div>
 		</section>
   <!-- Copyrights Section -->
