--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="images/logo.png" alt="">
-		<img class="smalllogotext" src="images/scrittalogo.png" alt="">
+		<img class="smalllogo" src="images/logo.png" alt="fulcrum_banner_top">
+		<img class="smalllogotext" src="images/scrittalogo.png" alt="fulcrum_text_top">
     	<div id="smallmenulinks">
 			<a href ="#notizie">Notizie</a> 
 			<a href ="#fulcrum">Fulcrum</a> 
@@ -40,7 +40,7 @@
 	</div>
 	
 	<div class="topbar">
-        <div class="logowrap"><img class="upperlogo" src="images/logo 350x125.jpg" alt=""></div> 
+        <div class="logowrap"><img class="upperlogo" src="images/logo 350x125.jpg" alt="fulcrum_logo"></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -48,9 +48,9 @@
 				</div>
 	    		<div class="subnav-content"> 
 					<a class="navbarlink" href="progetti/oca.html">Gioco dell'Oca</a> 
-					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="progetti/rune.html">Rune</a>
+					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 					
 					<a class="navbarlink" href="progetti/tales.html">Tales of Blades and Heroes</a>
+					<a class="navbarlink" href="progetti/rune.html">Rune</a>
  				</div>
       		</div>
 	  		<a class="navbarlink" href ="about.html">Chi Siamo</a> <a class="navbarlink" href ="servizi.html">Servizi</a> <a class="navbarlink" href ="faq.html">FAQ</a> <a class="navbarlink" href ="contactform.html">Contatti</a> <a class="navbarlink" href ="">Home</a>		
@@ -67,7 +67,7 @@
 	</section> -->
 	<section class="slider">		
 			<ul id="slides">
-  				<li><a href="about.html"><img src="images/banners/Fulcrum1100x300.jpg" alt=""></a></li>
+  				<li><a href="about.html"><img src="images/banners/Fulcrum1100x300.jpg" alt="Fulcrum Associazione Culturale"></a></li>
   				<li><a href="/progetti/guida.html"><img src="images/banners/Guida1100x300.jpg"  alt="Guida alla Frontiera Galattica - I viaggi della nave Onyx"></a></li>
   				<li><a href="/progetti/rune.html"><img src="images/banners/Rune1100x300.jpg" alt="Rune - La rinascita della prestigiosa rivista sul GDR"></a></li>
 				<li><a href="/progetti/oca.html"><img src="images/banners/Oca1100x300.jpg" alt="Gioco dell'Oca - Un classico riprodotto da Fulcrum in chiave artistica"></a></li>
@@ -78,19 +78,19 @@
   	<section class="news" id="news">
 		<h2>Ultime Notizie</h2>
         <div class="newsarticlebox">
-          <article class="newsarticle"> <img src="images/logo250x125.jpg" alt="" class="newsimage">
+          <article class="newsarticle"> <a href="index.html"><img src="images/logo250x125.jpg" alt="fulcrum_news" class="newsimage"></a>
             <p class="newstext">La beta del sito di Fulcrum è online! Ci scusiamo per eventuali disservizi!</p>
           </article>
-          <article class="newsarticle"> <img src="images/banners/guida250x125.jpg" alt="" class="newsimage">
+          <article class="newsarticle"> <img src="images/banners/guida250x125.jpg" alt="guida_news" class="newsimage">
             <p class="newstext">Guida Alla Frontiera Galattica - Il primo GDR di Fulcrum ed Edizioni Scudo</p>
           </article>
-          <article class="newsarticle"> <img src="images/banners/Rune250x125.jpg" alt="" class="newsimage">
+          <article class="newsarticle"> <img src="images/banners/Rune250x125.jpg" alt="rune_news" class="newsimage">
             <p class="newstext">Rune - La rinascita di un prestigioso titolo, nella forma di rivista di contenuti per giocatori</p>
           </article>
-          <article class="newsarticle"> <img src="images/banners/Oca250x125.jpg" alt="" class="newsimage">
+          <article class="newsarticle"> <img src="images/banners/Oca250x125.jpg" alt="oca_news" class="newsimage">
             <p class="newstext">Gioco dell'Oca - Il grande classico del gioco dell'oca, tinto dall'Arte e dalla Mistica di Anna Bergamini</p>
           </article>
-		  <article class="newsarticle"> <img src="images/banners/Tales250x125.jpg" alt="" class="newsimage">
+		  <article class="newsarticle"> <img src="images/banners/Tales250x125.jpg" alt="tales_news" class="newsimage">
             <p class="newstext">Tales of Blades and Heroes - La localizzazione in lingua italiana di uno dei giochi di Ganesha Games</p>
           </article>
         </div>	    	
@@ -99,10 +99,9 @@
     	<h1 class="hidden">Fulcrum Associazione Culturale </h1>
     	<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
 		<div class="footericons">
-		  <div class="footericon"><i class="fab fa-twitter"></i></div>
-          <div class="footericon"><i class="fab fa-facebook-square"></i></div>
-          <div class="footericon"><i class="fab fa-instagram"></i></div>
-          <div class="footericon"><i class="fab fa-youtube"></i></div>
+          	<div class="footericon"><a href="https://www.facebook.com/fulcrumassociazioneculturale/"><i class="fab fa-facebook-square"></i></a></div>
+          	<div class="footericon"><a href="http://www.instagram.com/fulcrum_associazione_culturale/"><i class="fab fa-instagram"></i></a></div>
+			<div class="footericon"><a href="contactform.html"><i class="fas fa-envelope"></i></a></div>
 		</div>
 	</section>
   <!-- Copyrights Section -->
