--- a/progetti.html
+++ b/progetti.html
@@ -20,8 +20,8 @@
 
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="/images/logo.png" alt="">
-		<img class="smalllogotext" src="/images/scrittalogo.png" alt="">
+		<img class="smalllogo" src="/images/logo.png" alt="fulcrum_banner_top">
+		<img class="smalllogotext" src="/images/scrittalogo.png" alt="fulcrum_text_top">
     	<div id="smallmenulinks">
 			<a href ="#notizie">Notizie</a> 
 			<a href ="#fulcrum">Fulcrum</a> 
@@ -35,7 +35,7 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="images/logo%20350x125.jpg" alt=""></div> 
+		<div class="logowrap"><img class="upperlogo" src="images/logo%20350x125.jpg" alt="fulcrum_logo"></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -58,28 +58,28 @@
 		<h1>I Nostri Progetti:</h1>
 		<section class="progetti">
 			<article>
-				<a href="progetti/guida.html"><img class="immaginiprogetti" src="images/banners/Guida250x125.jpg" alt=""></a>					
+				<a href="progetti/guida.html"><img class="immaginiprogetti" src="images/banners/Guida250x125.jpg" alt="guida_project"></a>					
 				<div class="testoprogetti">
 				  	<h2>Guida Alla Frontiera Galattica</h2>
 				  	<p>Preparatevi a saltare fra una stella e l'altra a bordo dell'astronave Onyx, nel suo viaggio di ritorno dalla frontiera della Galassia, combattendo i nemici dell'Impero ed esplorando pianeti sconosciuti e meravigliosi. Intrighi politici, alieni riottosi e pericoli sempre incombenti sono il sale del primo gioco di ruolo edito da Fulcrum e completamente illustrato da Luca Oleastri. Sarete in grado di riportare l'equipaggio a casa?</p>
 				</div>
 			</article> 
 			<article>
-				<a href="progetti/oca.html"><img class="immaginiprogetti" src="images/banners/Oca250x125.jpg" alt=""></a>
+				<a href="progetti/oca.html"><img class="immaginiprogetti" src="images/banners/Oca250x125.jpg" alt="oca_project"></a>
 				<div class="testoprogetti">
 					<h2>Gioco dell'Oca Illustrato</h2>
 					<p>Un gioco della tradizione in chiave mistica. Le illustrazioni dell'artista di fama nazionale Anna Bergamini danno vita a uno dei prodotti ludici più classici, con un'impronta mistica e spirituale. L'arte si unisce al gioco nel primo prodotto della linea Giochi d'Artista.</p>
 				</div>
 			</article> 
 			<article>
-				<a href="progetti/rune.html"><img class="immaginiprogetti" src="images/banners/Rune250x125.jpg" alt=""></a>
+				<a href="progetti/rune.html"><img class="immaginiprogetti" src="images/banners/Rune250x125.jpg" alt="rune_project"></a>
 				<div class="testoprogetti">
 					<h2>Rune</h2>
 				  	<p>Edizioni Scudo riporta in vita la famosa rivista sul GDR, Fulcrum è orgogliosa di partecipare a questo progetto, nato da giocatori per giocatori.  </p>
 				</div>
 			</article> 
 			<article>
-				<a href="progetti/tales.html"><img class="immaginiprogetti" src="images/banners/Tales250x125.jpg" alt=""></a>
+				<a href="progetti/tales.html"><img class="immaginiprogetti" src="images/banners/Tales250x125.jpg" alt="tales_project"></a>
 			  <div class="testoprogetti">
 				<h2>Tales of Blades and Heroes GDR</h2>
 				<p>Fulcrum porta in Italia il GDR di Andrea Sfligoi di Ganesha Games, basato sul conosciutissimo gioco di miniature Song of Blades and Heroes. Meccaniche semplici ma innovative si amalgamano in una ventata di Vecchia Scuola tutta italiana! </p>
@@ -91,10 +91,9 @@
     		<h2 class="hidden">Fulcrum Associazione Culturale </h2>
     		<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
 			<div class="footericons">
-		  		<div class="footericon"><i class="fab fa-twitter"></i></div>
-          		<div class="footericon"><i class="fab fa-facebook-square"></i></div>
-          		<div class="footericon"><i class="fab fa-instagram"></i></div>
-          		<div class="footericon"><i class="fab fa-youtube"></i></div>
+		  		<div class="footericon"><a href="https://www.facebook.com/fulcrumassociazioneculturale/"><i class="fab fa-facebook-square"></i></a></div>
+          		<div class="footericon"><a href="http://www.instagram.com/fulcrum_associazione_culturale/"><i class="fab fa-instagram"></i></a></div>
+				<div class="footericon"><a href="contactform.html"><i class="fas fa-envelope"></i></a></div>
 			</div>
 		</section>
   <!-- Copyrights Section -->
