--- a/progetti/Tales.html
+++ b/progetti/Tales.html
@@ -20,8 +20,8 @@
 
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="/images/logo.png" alt="">
-		<img class="smalllogotext" src="/images/scrittalogo.png" alt="">
+		<img class="smalllogo" src="/images/logo.png" alt="fulcrum_banner_top">
+		<img class="smalllogotext" src="/images/scrittalogo.png" alt="fulcrum_text_top">
     	<div id="smallmenulinks">
 			<a href ="#notizie">Notizie</a> 
 			<a href ="#fulcrum">Fulcrum</a> 
@@ -35,7 +35,7 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="../images/logo%20350x125.jpg" alt=""></div> 
+		<div class="logowrap"><img class="upperlogo" src="../images/logo%20350x125.jpg" alt="fulcrum_logo"></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -69,11 +69,11 @@
 		  	      	</h1>
 		  	    	<!-- InstanceBeginEditable name="content" -->
 		  	    	<p> Come primo progetto di localizzazione di Fulcrum, siamo deliziati di poter portare in Italia un gioco di un autore italiano, Andrea Sfiligoi, fondatore di Ganesha Games. Tales of Blades and Heroes è un sistema di regole leggere ed immediate, basato sul famoso gioco di combattimento con miniature, sempre prodotto da Ganesha, Song of Blades and Heroes. </p>
-					<div class="imgflow"><img src="../images/tales/taleswar.jpg" alt="">
+					<div class="imgflow"><img src="../images/tales/taleswar.jpg" alt="Tales Warrior">
 					<p>Il manuale offre tutto quello che è necessario per giocare, in 180 pagine formato tascabile o cartonato di lusso. Per la versione italiana verranno realizzati una nuova veste grafica e nuovi disegni.</p></div>
 		  	    	<div class="imgflow">
-		  	    	  <p>L'ambientazione proposta da Tales ammicca ai giochi della scuola di vecchio stampo, come le prime edizioni di Dungeons and Dragons. Il sistema utilizza, per le azioni mondane, un numero ridotto di statistiche e si basa sul D6, la magia, invece utilizza una è strutturata su Verbi e Nomi, concedendo ai giocatori una libertà &nbsp;sulla creazione dei loro incantesimi.</p>
-	  	    	    <img src="../images/tales/sparks.jpg" alt=""></div>
+		  	    	  <p>L'ambientazione proposta da Tales ammicca ai giochi della scuola di vecchio stampo, come le prime edizioni di Dungeons and Dragons. Il sistema utilizza, per le azioni mondane, un numero ridotto di statistiche e si basa sul D6, la magia, inoltre è strutturata su Verbi e Nomi, concedendo ai giocatori una vastissima libertà sulla creazione dei loro incantesimi.</p>
+	  	    	    <img src="../images/tales/sparks.jpg" alt="Tales Wizard"></div>
 		  	    	<p> La presentazione di Tales of Blades and Heroes GDR avverrà a Modena Play 2019. </p>
 		  	    	<!-- InstanceEndEditable -->
 		  	    </div>
@@ -83,12 +83,44 @@
                   	</div>
 					<section class="news">
 						<div class="newstop">
-						  <time class="newsdate">18/02/2019</time>
-						  <h3>Guida alla Frontiera Galattica</h3>
+						<time class="newsdate">18/02/2019</time>
+						<h3>Fulcrum Associazione Culturale</h3>
 					    </div>                        
-						<img src="../images/banners/Guida250x125.jpg">
+						<a href="../index.html"><img src="../images/logo250x125.jpg" alt="fulcrum_news"></a>
+						<h4>Siamo Online! </h4>
+						<p>Siamo finalmente online e operativi, nella pagina principale, tenuta in costante aggiornamento, trovate i link ai nostri progetti.</p>	
+						<div class="divider"></div>
+						<div class="newstop">
+						<time class="newsdate">18/02/2019</time>
+						<h3>Guida alla Frontiera Galattica</h3>
+					    </div>                        
+						<a href="guida.html"><img src="../images/banners/Guida250x125.jpg" alt="guida_news"></a>
 						<h4>Annuncio Progetto </h4>
 						<p>Potete leggere i dettagli sul primo GDR prodotto interamente da Fulcrum, in collaborazione con Edizioni Scudo.</p>	
+						<div class="divider"></div>
+						<div class="newstop">
+						<time class="newsdate">18/02/2019</time>
+						<h3>Rune Rivista</h3>
+					    </div>                        
+						<a href="rune.html"><img src="../images/banners/Rune250x125.jpg" alt="rune_news"></a>
+						<h4>Annuncio Progetto </h4>
+						<p>La rinascita della rivista che mette al centro i giocatori.</p>	
+						<div class="divider"></div>
+						<div class="newstop">
+						<time class="newsdate">18/02/2019</time>
+						<h3>Gioco Dell'Oca</h3>
+					    </div>                        
+						<a href="oca.html"><img src="../images/banners/Oca250x125.jpg" alt="oca_news"></a>
+						<h4>Annuncio Progetto </h4>
+						<p>Dalle illustrazioni mistiche dell'artista Anna Bergamini, un classico del gioco da tavolo.</p>	
+						<div class="divider"></div>
+						<div class="newstop">
+						<time class="newsdate">18/02/2019</time>
+						<h3>Gioco Dell'Oca</h3>
+					    </div>                        
+						<a href="tales.html"><img src="../images/banners/Tales250x125.jpg" alt="tales_news"></a>
+						<h4>Annuncio Progetto </h4>
+						<p>Tratto dal gioco di miniature di Andrea Sfligoi, la traduzione italiana del Gioco di Ruolo.</p>	
 						<div class="divider"></div>
 					</section>
 				</div>
@@ -99,10 +131,9 @@
     		<h2 class="hidden">Fulcrum Associazione Culturale </h2>
     		<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
 			<div class="footericons">
-		  		<div class="footericon"><i class="fab fa-twitter"></i></div>
-          		<div class="footericon"><i class="fab fa-facebook-square"></i></div>
-          		<div class="footericon"><i class="fab fa-instagram"></i></div>
-          		<div class="footericon"><i class="fab fa-youtube"></i></div>
+		  		<div class="footericon"><a href="https://www.facebook.com/fulcrumassociazioneculturale/"><i class="fab fa-facebook-square"></i></a></div>
+          		<div class="footericon"><a href="http://www.instagram.com/fulcrum_associazione_culturale/"><i class="fab fa-instagram"></i></a></div>
+				<div class="footericon"><a href="../contactform.html"><i class="fas fa-envelope"></i></a></div>
 			</div>
 		</section>
   <!-- Copyrights Section -->
