--- a/contactform.html
+++ b/contactform.html
@@ -15,13 +15,14 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
 <!-- InstanceBeginEditable name="stylesheets" -->
+	
 <!-- InstanceEndEditable -->
 </head>
 
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="/images/logo.png" alt="">
-		<img class="smalllogotext" src="/images/scrittalogo.png" alt="">
+		<img class="smalllogo" src="/images/logo.png" alt="fulcrum_banner_top">
+		<img class="smalllogotext" src="/images/scrittalogo.png" alt="fulcrum_text_top">
     	<div id="smallmenulinks">
 			<a href ="#notizie">Notizie</a> 
 			<a href ="#fulcrum">Fulcrum</a> 
@@ -35,7 +36,7 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="images/logo%20350x125.jpg" alt=""></div> 
+		<div class="logowrap"><img class="upperlogo" src="images/logo%20350x125.jpg" alt="fulcrum_logo"></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -121,10 +122,9 @@
     		<h2 class="hidden">Fulcrum Associazione Culturale </h2>
     		<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
 			<div class="footericons">
-		  		<div class="footericon"><i class="fab fa-twitter"></i></div>
-          		<div class="footericon"><i class="fab fa-facebook-square"></i></div>
-          		<div class="footericon"><i class="fab fa-instagram"></i></div>
-          		<div class="footericon"><i class="fab fa-youtube"></i></div>
+		  		<div class="footericon"><a href="https://www.facebook.com/fulcrumassociazioneculturale/"><i class="fab fa-facebook-square"></i></a></div>
+          		<div class="footericon"><a href="http://www.instagram.com/fulcrum_associazione_culturale/"><i class="fab fa-instagram"></i></a></div>
+				<div class="footericon"><a href="contactform.html"><i class="fas fa-envelope"></i></a></div>
 			</div>
 		</section>
   <!-- Copyrights Section -->
