--- a/progetti/oca.html
+++ b/progetti/oca.html
@@ -20,8 +20,8 @@
 
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="/images/logo.png" alt="">
-		<img class="smalllogotext" src="/images/scrittalogo.png" alt="">
+		<img class="smalllogo" src="/images/logo.png" alt="fulcrum_banner_top">
+		<img class="smalllogotext" src="/images/scrittalogo.png" alt="fulcrum_text_top">
     	<div id="smallmenulinks">
 			<a href ="#notizie">Notizie</a> 
 			<a href ="#fulcrum">Fulcrum</a> 
@@ -35,7 +35,7 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="../images/logo%20350x125.jpg" alt=""></div> 
+		<div class="logowrap"><img class="upperlogo" src="../images/logo%20350x125.jpg" alt="fulcrum_logo"></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -86,14 +86,45 @@
                   	</div>
 					<section class="news">
 						<div class="newstop">
-						  <time class="newsdate">18/02/2019</time>
-						  <h3>Guida alla Frontiera Galattica</h3>
+						<time class="newsdate">18/02/2019</time>
+						<h3>Fulcrum Associazione Culturale</h3>
 					    </div>                        
-						<img src="../images/banners/Guida250x125.jpg">
-						<h4>Annuncio Progetto </h4>
-						<p>Potete leggere i dettagli sul primo GDR prodotto interamente da Fulcrum, in collaborazione con Edizioni Scudo.</p>
+						<a href="../index.html"><img src="../images/logo250x125.jpg" alt="fulcrum_news"></a>
+						<h4>Siamo Online! </h4>
+						<p>Siamo finalmente online e operativi, nella pagina principale, tenuta in costante aggiornamento, trovate i link ai nostri progetti.</p>	
 						<div class="divider"></div>
-						<hr>
+						<div class="newstop">
+						<time class="newsdate">18/02/2019</time>
+						<h3>Guida alla Frontiera Galattica</h3>
+					    </div>                        
+						<a href="guida.html"><img src="../images/banners/Guida250x125.jpg" alt="guida_news"></a>
+						<h4>Annuncio Progetto </h4>
+						<p>Potete leggere i dettagli sul primo GDR prodotto interamente da Fulcrum, in collaborazione con Edizioni Scudo.</p>	
+						<div class="divider"></div>
+						<div class="newstop">
+						<time class="newsdate">18/02/2019</time>
+						<h3>Rune Rivista</h3>
+					    </div>                        
+						<a href="rune.html"><img src="../images/banners/Rune250x125.jpg" alt="rune_news"></a>
+						<h4>Annuncio Progetto </h4>
+						<p>La rinascita della rivista che mette al centro i giocatori.</p>	
+						<div class="divider"></div>
+						<div class="newstop">
+						<time class="newsdate">18/02/2019</time>
+						<h3>Gioco Dell'Oca</h3>
+					    </div>                        
+						<a href="oca.html"><img src="../images/banners/Oca250x125.jpg" alt="oca_news"></a>
+						<h4>Annuncio Progetto </h4>
+						<p>Dalle illustrazioni mistiche dell'artista Anna Bergamini, un classico del gioco da tavolo.</p>	
+						<div class="divider"></div>
+						<div class="newstop">
+						<time class="newsdate">18/02/2019</time>
+						<h3>Gioco Dell'Oca</h3>
+					    </div>                        
+						<a href="tales.html"><img src="../images/banners/Tales250x125.jpg" alt="tales_news"></a>
+						<h4>Annuncio Progetto </h4>
+						<p>Tratto dal gioco di miniature di Andrea Sfligoi, la traduzione italiana del Gioco di Ruolo.</p>	
+						<div class="divider"></div>
 					</section>
 				</div>
 	  		</div>
@@ -103,10 +134,9 @@
     		<h2 class="hidden">Fulcrum Associazione Culturale </h2>
     		<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
 			<div class="footericons">
-		  		<div class="footericon"><i class="fab fa-twitter"></i></div>
-          		<div class="footericon"><i class="fab fa-facebook-square"></i></div>
-          		<div class="footericon"><i class="fab fa-instagram"></i></div>
-          		<div class="footericon"><i class="fab fa-youtube"></i></div>
+		  		<div class="footericon"><a href="https://www.facebook.com/fulcrumassociazioneculturale/"><i class="fab fa-facebook-square"></i></a></div>
+          		<div class="footericon"><a href="http://www.instagram.com/fulcrum_associazione_culturale/"><i class="fab fa-instagram"></i></a></div>
+				<div class="footericon"><a href="../contactform.html"><i class="fas fa-envelope"></i></a></div>
 			</div>
 		</section>
   <!-- Copyrights Section -->
