--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta description="Fulcrum è un’associazione che sorge dall’idea di offrire un supporto professionale ad artisti, scrittori e autori per i loro progetti, fornendo una serie di servizi nelle varie fasi, dalla concezione alla eventuale commercializzazione.">
+<meta name="google-site-verification" content="zK-i6r66K0IMMxxb_KhhsIAMqjYCjDHbarmI3uPSe4k" />
 <title>Fulcrum Associazione Culturale - Home</title>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
@@ -25,14 +27,14 @@
 </head>
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="images/logo.png" alt="fulcrum_banner_top">
-		<img class="smalllogotext" src="images/scrittalogo.png" alt="fulcrum_text_top">
+		<img class="smalllogo" src="images/banners/fulcrumbannersmall.jpg" alt="fulcrum_banner_top">
     	<div id="smallmenulinks">
-			<a href ="#notizie">Notizie</a> 
-			<a href ="#fulcrum">Fulcrum</a> 
-			<a href ="#servizi">Servizi</a> 
-			<a href ="#faq">FAQ</a> 
-			<a href ="#contatti">Contatti</a>
+			<a href ="progetti.html">Progetti</a> 
+			<a href ="about.html">Fulcrum</a> 
+			<a href ="servizi.html">Servizi</a> 
+			<a href ="faq.html">FAQ</a> 
+			<a href ="contactform.html">Contatti</a>	
+			<a href ="index.html">Home</a>
 	    </div>
 		<a href="javascript:void(0);" class="smallmenuicon" onclick="openSmallMenu()">
 			<i class="fas fa-bars"></i>
@@ -78,19 +80,19 @@
   	<section class="news" id="news">
 		<h2>Ultime Notizie</h2>
         <div class="newsarticlebox">
-          <article class="newsarticle"> <a href="index.html"><img src="images/logo250x125.jpg" alt="fulcrum_news" class="newsimage"></a>
+          <article class="newsarticle"> <a href="index.html"><img src="images/banners/Fulcrum250x125.jpg" alt="fulcrum_news" class="newsimage"></a>
             <p class="newstext">La beta del sito di Fulcrum è online! Ci scusiamo per eventuali disservizi!</p>
           </article>
-          <article class="newsarticle"> <img src="images/banners/guida250x125.jpg" alt="guida_news" class="newsimage">
+          <article class="newsarticle"> <a href="progetti/guida.html"><img src="images/banners/Guida250x125.jpg" alt="guida_news" class="newsimage"></a>
             <p class="newstext">Guida Alla Frontiera Galattica - Il primo GDR di Fulcrum ed Edizioni Scudo</p>
           </article>
-          <article class="newsarticle"> <img src="images/banners/Rune250x125.jpg" alt="rune_news" class="newsimage">
+          <article class="newsarticle"> <a href="progetti/rune.html"><img src="images/banners/Rune250x125.jpg" alt="rune_news" class="newsimage"></a>
             <p class="newstext">Rune - La rinascita di un prestigioso titolo, nella forma di rivista di contenuti per giocatori</p>
           </article>
-          <article class="newsarticle"> <img src="images/banners/Oca250x125.jpg" alt="oca_news" class="newsimage">
+          <article class="newsarticle"> <a href="progetti/oca.html"><img src="images/banners/Oca250x125.jpg" alt="oca_news" class="newsimage"></a>
             <p class="newstext">Gioco dell'Oca - Il grande classico del gioco dell'oca, tinto dall'Arte e dalla Mistica di Anna Bergamini</p>
           </article>
-		  <article class="newsarticle"> <img src="images/banners/Tales250x125.jpg" alt="tales_news" class="newsimage">
+		  <article class="newsarticle"> <a href="progetti/tales.html"><img src="images/banners/Tales250x125.jpg" alt="tales_news" class="newsimage"></a>
             <p class="newstext">Tales of Blades and Heroes - La localizzazione in lingua italiana di uno dei giochi di Ganesha Games</p>
           </article>
         </div>	    	
