--- a/servizi.html
+++ b/servizi.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta description="Fulcrum è un’associazione che sorge dall’idea di offrire un supporto professionale ad artisti, scrittori e autori per i loro progetti, fornendo una serie di servizi nelle varie fasi, dalla concezione alla eventuale commercializzazione.">
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Fulcrum Associazione Culturale - Servizi</title>
 <!-- InstanceEndEditable -->
@@ -20,14 +21,14 @@
 
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="/images/logo.png" alt="fulcrum_banner_top">
-		<img class="smalllogotext" src="/images/scrittalogo.png" alt="fulcrum_text_top">
+		<img class="smalllogo" src="images/banners/fulcrumbannersmall.jpg" alt="fulcrum_banner_top">
     	<div id="smallmenulinks">
-			<a href ="#notizie">Notizie</a> 
-			<a href ="#fulcrum">Fulcrum</a> 
-			<a href ="#servizi">Servizi</a> 
-			<a href ="#faq">FAQ</a> 
-			<a href ="#contatti">Contatti</a>
+			<a href ="progetti.html">Progetti</a> 
+			<a href ="about.html">Fulcrum</a> 
+			<a href ="servizi.html">Servizi</a> 
+			<a href ="faq.html">FAQ</a> 
+			<a href ="contactform.html">Contatti</a>	
+			<a href ="index.html">Home</a>
 	    </div>
 		<a href="javascript:void(0);" class="smallmenuicon" onclick="openSmallMenu()">
 			<i class="fas fa-bars"></i>
